--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1 class="text-7xl font-bold">Welcome to Mile XII</h1>
+<app-header></app-header>
+
+<div class="text-center">
+  <h1 class="text-7xl font-bold">Welcome to Mile XII</h1>
+</div>
